[package]
name = "gamepower-traits"
description = "Shared traits for the GamePower Network module library."
repository = "https://github.com/GamePowerNetwork/gamepower-module-library/tree/main/traits"
license = "Apache-2.0"
version = "0.0.1"
authors = ["GamePower Developers <dev@gamepower.network>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
orml-traits = { default-features = false, version = '0.4.0' }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"num-traits/std",
	"frame-support/std",
  "orml-traits/std",
]