[package]
name = "gamepower-traits"
description = "Shared traits for the GamePower Network module library."
repository = "https://github.com/GamePowerNetwork/gamepower-module-library/tree/main/traits"
license = "Apache-2.0"
version = "0.0.1"
authors = ["GamePower Developers <dev@gamepower.network>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
]